fixed dropdown appearance issue and collapse on iphone

--- a/src/assets/sass/components/_selector.scss
+++ b/src/assets/sass/components/_selector.scss
@@ -25,10 +25,16 @@
     border-radius: 0;
     height: rem(34px);
     -webkit-appearance: none;
-    -moz-appearance: none;
+     -moz-appearance: none;
+      -ms-appearance: none;
+       -o-appearance: none;
+          appearance: none;
     width: 100%;
     max-width: 100%;
     padding-left: $half-unit-layout;
+  }
+  select::-ms-expand {
+    display: none !important;
   }
 }
 
